crates/sakka-test/tests/trybuild/enum_variant_sakka_attr.stderr
error: enum variants cannot use #[sakka(...)] attributes
 --> tests/trybuild/enum_variant_sakka_attr.rs:6:5
  |
6 |     #[sakka(codec = ByteCodec)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
